Date	Added
12/27
        * Updated the new guild skills - cannot be reused within 5 minutes of 
          activating it [celest]
        * Added @mobsearch, @cleanmap and @giveitem from jA [celest]
	* Fixed the guild issues (SVN 832) [MouseJstr]
        * Updated description for player_check_cloak_type [celest]
        * Increased skill range limitations in pc_no_footset [celest]
        * Added exp_calc_type - to alternate between 3 different versions for exp
          calculating [celest]
	* Reinitialized variable 'c' in map_readmap, it's supposed to have a start value. Ex. '-'. [MC Cameri]
	* Commented out dump_timer_heap() again... [MC Cameri]
	* Added include of string.h in malloc.c, was causing compile errors/warnings [MC Cameri]
	* Modified the map progress bar to reduce updates (SVN 829) [MouseJstr]
        * Updated map cache system from jA 1087 - change read_map_from_bitmap to 2 to
          enable zlib compression [celest]
	* don't delete alive_timers of -1  (SVN 823) [MouseJstr]
	* switched malloc,calloc,realloc to aMalloc, aCalloc, aRealloc
	  so support the use of a garbage collector (SVN 821) [MouseJstr]
	* Removed some printf's from map-sql [MC Cameri]
	* Uncommented MSG_SQL, for _ShowMessage(), usage: ShowSQL() [MC Cameri]
	* Removed fixed bugs in dev/bugs.txt [MC Cameri]
        * Now I remember what I was smoking.. (SVN 819) [MouseJstr]
	* Fixed a bug in the guild_castle persistance code
	  in char_sql.  What was I smoking?  (SVN: 816) [MouseJstr]
        * Corrected a bad error in itemdb_read_itemslottable [celest]
        * Corrected wrong logging of text in int_guild.c, thanks to Alex14 [celest]
        * Summoned monsters will not give exp and items [celest]
        * Added the 6 new Yuno fields to maps_athena.conf [celest]
        * Added some Freya's optimisations in clif_parse [celest]
        * Added clif_update_mobhp - monsters' hp viewing now updates properly [celest]