@@ -1,5 +1,6 @@
 Date	Added
 12/27
+        * Updated 1206's packet fuctions in clif.c [celest]
         * Updated the new guild skills - cannot be reused within 5 minutes of 
           activating it [celest]
         * Added @mobsearch, @cleanmap and @giveitem from jA [celest]
